<resources>
    <string name="app_name">Shopito</string>
    <string name="n_more_items">%1d more items</string>
    <string name="add_item">Add item</string>
    <string name="active_list_title">Active list</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="add_from_favorites_button">Add from favorites</string>

    <!-- Category names -->
    <string name="category_children">Kids</string>
    <string name="category_bakery">Bakery</string>
    <string name="category_drinks">Drinks</string>
    <string name="category_pets">Pets</string>
    <string name="category_home">Household</string>
    <string name="category_grocery">Grocery</string>
    <string name="category_dairy">Dairy</string>
    <string name="category_meds">Medication</string>
    <string name="category_fruits_and_vegatables">Fruits &amp; Vegetables</string>
    <string name="category_meat">Meat &amp; Fish</string>
    <string name="category_hygiene_and_cosmetics">Hygiene &amp; Cosmetics</string>
    <string name="category_snacks">Snacks</string>
    <string name="category_other">Other</string>
    <string name="category_done">Done</string>
    <!-- Popup menu actions -->
    <string name="delete_all">Delete all</string>
    <string name="complete_all">Complete all</string>
    <string name="clear_list">Clear list</string>
    <string name="mark_as_done">Mark current list as done</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_set_active">Set as active</string>
    <string name="uncomplete_all">Uncomplete all</string>
    <string name="menu_edit">Edit</string>

    <!-- Tooltip text -->
    <string name="tooltip_active_list_empty">• Add an item below to start your list\n\n<br/>• Tap list item to mark it as done\n\n<br/>• Tap and hold to add item to favorites
    </string>
    <string name="tooltip_active_list_done">Good Job! List was added to history</string>
    <string name="title_tooltip">Title</string>
    <string name="tooltip_favorite_products_screen">Your favorite products will be here</string>
    <string name="tooltip_favorite_list_screen">Your favorite grocery lists will be here</string>
    <string name="tooltip_history_list_screen">Your finished lists will be here</string>

    <string name="n_items">%1d items</string>

    <!-- Destinations -->
    <string name="active">Active list</string>
    <string name="history">History</string>
    <string name="favorites">Favorites</string>
    <string name="favorite_products">Favorite products</string>
    <string name="settings">Settings</string>

    <string name="tab_lists">Lists</string>
    <string name="tab_products">Products</string>
    
    <!-- Dialog questions -->
    <string name="question_delete_all">Are you sure you want to delete all records?</string>
    <string name="question_delete">Are you sure you want to delete this list?</string>
    <string name="question_save_to_favorites">Save to favorites?</string>

    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="n_days_ago">%1d days ago</string>

    <!-- Acessibility -->
    <string name="drawer_open_desc" translatable="false">Navigation Drawer opened</string>
    <string name="drawer_closed_desc" translatable="false">Navigation Drawer closed</string>
    <string name="hide">Hide</string>
    <string name="item_description">Description</string>

    <!-- On Boarding -->
    <string name="onboarding_title_1">Create</string>
    <string name="onboarding_title_2">Past lists storage</string>
    <string name="onboarding_title_3">Save</string>
    <string name="onboarding_subtitle_1">Create groceries lists and sort its items by categories</string>
    <string name="onboarding_subtitle_2">Finished lists are stored in history tab for future use</string>
    <string name="onboarding_subtitle_3">Add products to favorites for easier access</string>
    <string name="onboarding_finish_button">Let\'s go</string>

    <!-- Shred preferences settings entries -->
    <string name="settings_category_title_appearance">Appearance</string>
    <string name="settings_category_title_active_list">Active list</string>
    <string name="settings_category_title_storage">Storage</string>
    <string name="settings_collapse_done_category">Collapse done category</string>
    <string name="settings_language">Language</string>
    <string-array name="settings_language_values">
        <item>English</item>
        <item>Русский</item>
    </string-array>
    <string-array name="settings_theme_values">
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <string name="settings_storage_delete_all_lists_dialog">Also delete favorite lists?</string>
    <string name="settings_storage_delete_all_lists">Clear list history</string>
    <string name="settings_storage_delete_all_favorite_products_dialog">Are you sure you want to delete all favorite products?</string>
    <string name="settings_storage_delete_all_favorite_products">Clear favorite products</string>
    <string name="settings_storage_auto_delete">Clean up old records</string>
    <string name="settings_storage_auto_delete_dialog">Automatically remove records older then:</string>
    <string name="settings_storage_auto_delete_desc">
        Automatically delete not lists older than certain amount of days (favorite lists are not affected)
    </string>
    <string-array name="settings_storage_entries">
        <item>7 days</item>
        <item>14 days</item>
        <item>1 month</item>
        <item>Never</item>
    </string-array>
    <string-array name="settings_storage_values">
        <item>7</item>
        <item>14</item>
        <item>30</item>
        <item>1000</item>
    </string-array>
    <string name="settings_storage_values_default" translatable="false">14</string>
    <string name="settings_complete_lists">Complete lists automatically</string>
</resources>