<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/active_list_destination">

    <fragment
        android:id="@+id/active_list_destination"
        android:name="com.chudofishe.grocerieslistapp.ui.active_list_screen.ActiveListFragment"
        android:label="@string/active_list_title"
        tools:layout="@layout/fragment_active_list" >
        <argument
            android:name="historyList"
            app:argType="com.chudofishe.grocerieslistapp.data.model.ShoppingList"
            android:defaultValue="@null"
            app:nullable="true" />
        <action
            android:id="@+id/action_active_list_destination_to_favoriteProductsFragment"
            app:destination="@id/favoriteProductsFragment" />
        <argument
            android:name="selectedFavItems"
            app:argType="com.chudofishe.grocerieslistapp.data.model.ShoppingItem[]"
            app:nullable="true"
            android:defaultValue="@null" />
        <action
            android:id="@+id/action_active_list_destination_to_onBoardingHostFragment3"
            app:destination="@id/onBoardingHostFragment"
            app:popUpTo="@id/active_list_destination"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/history_list_destination"
        android:name="com.chudofishe.grocerieslistapp.ui.history_screen.HistoryFragment"
        android:label="@string/history"
        tools:layout="@layout/fragment_history_list">
        <action
            android:id="@+id/action_history_list_destination_to_active_list_destination"
            app:destination="@id/active_list_destination"
            app:launchSingleTop="false"
            app:popUpTo="@id/active_list_destination"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/favorites_destination"
        android:name="com.chudofishe.grocerieslistapp.ui.favorites_screen.FavoritesFragment"
        android:label="@string/favorites"
        tools:layout="@layout/fragment_favorites">
        <action
            android:id="@+id/action_favorites_destination_to_active_list_destination"
            app:destination="@id/active_list_destination"
            app:popUpTo="@id/active_list_destination"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/favorite_lists_destination"
        android:name="com.chudofishe.grocerieslistapp.ui.favorites_screen.FavoriteListsFragment"
        android:label="FavoriteListsFragment"
        tools:layout="@layout/fragment_history_list"/>
    <fragment
        android:id="@+id/favoriteProductsFragment"
        android:name="com.chudofishe.grocerieslistapp.ui.favorites_screen.FavoriteProductsFragment"
        android:label="@string/favorite_products"
        tools:layout="@layout/fragment_favorite_products">
        <action
            android:id="@+id/action_favoriteProductsFragment_to_active_list_destination"
            app:destination="@id/active_list_destination"
            app:popUpTo="@id/active_list_destination"
            app:popUpToInclusive="true" />
        <argument
            android:name="selectionMode"
            android:defaultValue="false"
            app:argType="boolean" />
    </fragment>
    <fragment
        android:id="@+id/onBoardingHostFragment"
        android:name="com.chudofishe.grocerieslistapp.ui.onboarding_screen.OnBoardingHostFragment"
        android:label="OnBoardingHostFragment" >
        <action
            android:id="@+id/action_onBoardingHostFragment_to_active_list_destination"
            app:destination="@id/active_list_destination"
            app:launchSingleTop="false"
            app:popUpTo="@id/onBoardingHostFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/settings_destination"
        android:name="com.chudofishe.grocerieslistapp.ui.settings_screen.SettingsFragment"
        android:label="@string/settings" />
</navigation>